# libnpy-crc-mismatch

./: CMakeLists.txt  CMakePresets.json  create_sample_data.py  readme.md  sample_data.npz  sample_data_compressed.npz  source.cpp  vcpkg-configuration.json  vcpkg.json
